--- a/languages/source-framework-es_ES.po
+++ b/languages/source-framework-es_ES.po
@@ -1,15 +1,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Source Framework\n"
-"POT-Creation-Date: 2017-01-11 13:49-0400\n"
-"PO-Revision-Date: 2017-01-11 13:50-0400\n"
+"POT-Creation-Date: 2017-03-08 11:01-0400\n"
+"PO-Revision-Date: 2017-03-08 11:02-0400\n"
 "Last-Translator: Javier Prieto <jprieton@gmail.com>\n"
 "Language-Team: \n"
 "Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.11\n"
+"X-Generator: Poedit 1.8.12\n"
 "X-Poedit-KeywordsList: __;_e;__ngettext:1,2;_n:1,2;__ngettext_noop:1,2;"
 "_n_noop:1,2;_c,_nc:4c,1,2;_x:1,2c;_nx:4c,1,2;_nx_noop:4c,1,2;_ex:1,2c;"
 "esc_attr__;esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c\n"
@@ -17,6 +17,46 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-SearchPath-0: ..\n"
+
+#: ../admin/class-advanced-settings.php:18
+msgid "Advanced Settings"
+msgstr "Ajustes avanzados"
+
+#: ../core/forms/elements/class-select.php:42
+msgid "Select..."
+msgstr "Seleccione..."
+
+#: ../core/init.php:49
+msgid "Success!"
+msgstr "¡Éxito!"
+
+#: ../core/init.php:50
+msgid "Fail!"
+msgstr "¡Falló!"
+
+#: ../core/init.php:51
+msgid "Error!"
+msgstr "¡Error!"
+
+#: ../core/init.php:52
+msgid "Send"
+msgstr "Enviar"
+
+#: ../core/init.php:53
+msgid "Submit"
+msgstr "Enviar"
+
+#: ../core/init.php:54
+msgid "Sending..."
+msgstr "Enviando..."
+
+#: ../core/init.php:55
+msgid "Sent!"
+msgstr "¡Enviado!"
+
+#: ../core/settings/abstract-settings-page___option.php:376
+msgid "Default"
+msgstr "Predeterminado"
 
 #~ msgid "SMG WordPress Development Tools"
 #~ msgstr "SMG Herramientas de desarrollo de WordPress"
@@ -163,9 +203,6 @@ msgstr ""
 #~ msgid "Password does not match with the confirm password."
 #~ msgstr "Contraseña no coincide con la contraseña de confirmación."
 
-#~ msgid "Submit"
-#~ msgstr "Enviar"
-
 #~ msgid "Select an option..."
 #~ msgstr "Selecciona una opción…"
 
@@ -186,24 +223,6 @@ msgstr ""
 
 #~ msgid "The data that you entered is invalid."
 #~ msgstr "Los datos que ha ingresado son inválidos."
-
-#~ msgid "Success!"
-#~ msgstr "¡Éxito!"
-
-#~ msgid "Fail!"
-#~ msgstr "¡Falló!"
-
-#~ msgid "Error!"
-#~ msgstr "¡Error!"
-
-#~ msgid "Send"
-#~ msgstr "Enviar"
-
-#~ msgid "Sending..."
-#~ msgstr "Enviando..."
-
-#~ msgid "Sent!"
-#~ msgstr "¡Enviado!"
 
 #~ msgid "All Portfolio"
 #~ msgstr "Todo el Portafolio"
